﻿Comprehensive changes can be found in Git change history:
	https://github.com/mkahvi/taskmaster/commits/master

### 2018-05-25
	Fixed: NullReferenceException at line 101
	Fixed: Default affinity strategy (limit) did not actually limit due to faults in bit flopping logics.
### 2018-05-23
	Added: Extra path cache/finding statistics on exit.
	Fixed: A fatal error related to failure to extract path from process module.
### 2018-05-21
	Changed: Dialog from component config now allows instant restarting of TM if so desired.
	Fixed: Problems with new unconfigured TM setups.
### 2018-05-20
	Added: ctrl-alt-shift-m global hotkey to free memory except from current foreground app. This is disabled by default and requires enabling via `Register global hotkeys` in Core.ini.
	Changed: A lot of internal scheduling was altered, hopefully to make TM more responsive.
	Fixed: Rolled back a change that provided extended version information due to it causing crashes on some systems. Cause is known, fix is not.
### 2018-05-19
	Fixed: Watchlist rule edit window allowed entering garbage in affinity strategy.
	Changed: Saving a watchlist rule does not delete the old.
	Changed: Watchlist rules are no longer re-ordered when modified, as long as the friendly name remains unchanged. This is limitation of SharpConfig.
	Changed: Process affinity and priority adjusts now include a short text about failure to modify them.
	Added: `Persistent watchlist statistics` option in [Performance] section. Disabling it causes Watchlist.Statistics.ini no longer accessed.
	Changed: Some timestamp calculation changes, should have no end-user visible effects.
	Changed: Copy to clipboard for watchlist rules now includes ignore list, affinity strategy, recheck time, and correct executable name.
	Fixed: Cache eviction was apparently non-functional until a recent change. This change also revealed old debugging messages. These messages no longer show up under normal operation.
### 2018-05-18